# recipos

./: .dockerignore  .gitignore  README.md  docker-compose.yaml
backend/: .pyre_configuration  Dockerfile  pyproject.toml
backend/src/: base.py  create_app.py  entry.sh  logger.py  utils.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: b0428e0df2b0_added_initial_tables.py  e08e44d68e08_added_image_to_recipe_table.py
backend/src/api/: auth.py  errors.py  recipe.py  user.py
backend/src/models/: base.py  ingredient.py  recipe.py  user.py
frontend/: Dockerfile  config.js  package-lock.json  package.json  tsconfig.json
frontend/components/: Navbar.tsx  RecipeBox.tsx  RecipeDetail.tsx  RecipesFilter.tsx  SessionStorage.tsx  Warnings.tsx
frontend/components/API/: ApiProvider.tsx
frontend/components/Auth/: AuthContext.tsx  AuthProvider.tsx  useAuth.tsx
frontend/components/Directions/: AddDirection.tsx  Directions.tsx  DirectionsList.tsx
frontend/components/Ingredients/: AddIngredient.tsx  IngredientList.tsx  Ingredients.tsx
frontend/components/Selects/: CustomSelect.tsx  IngredientsSelect.tsx  RecipeTypeSelect.tsx  UnitSelect.tsx
frontend/pages/: _app.tsx  index.tsx  login.tsx  newRecipe.tsx  recipes.tsx  signUp.tsx
frontend/pages/editRecipe/: [id].tsx
frontend/pages/recipes/: [id].tsx
frontend/styles/: App.css  Home.module.css  Select.tsx  theme.tsx
